import: Berkeley DB 4.8.30 (2010-04-09)
Upstream source tarball db-4.8.30.tar.gz imported verbatim.